VeraSandBox2016/src/objects/ExpertSearchPositionFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>All about search filters for specific positions.</description>
    <fields>
        <fullName>Level_2_Criteria_Type__c</fullName>
        <description>Criteria type of Level 2 filter, whether it is record from object , picklist value or predefined values</description>
        <inlineHelpText>Values identified are Object, Picklist, Constant(CSV)</inlineHelpText>
        <label>Level 2 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Criteria__c</fullName>
        <description>Criteria of Level 2 filter</description>
        <inlineHelpText>Criteria of Level 2 filter</inlineHelpText>
        <label>Level 2 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_ObjectName__c</fullName>
        <description>Base object of Level 2 filter</description>
        <label>Level 2 Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Criteria_Type__c</fullName>
        <description>Criteria type of level 3</description>
        <label>Level 3 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Criteria__c</fullName>
        <description>Criteria for Level 3</description>
        <inlineHelpText>Criteria for Level 3</inlineHelpText>
        <label>Level 3 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_ObjectName__c</fullName>
        <description>base object for level 3</description>
        <label>Level 3 Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_4_Criteria_Type__c</fullName>
        <description>Criteria type of level 4</description>
        <inlineHelpText>Values identified are Object, Picklist, Constant(CSV)</inlineHelpText>
        <label>Level 4 Criteria Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_4_Criteria__c</fullName>
        <description>Criteria of level 4</description>
        <inlineHelpText>Criteria of level 4</inlineHelpText>
        <label>Level 4 Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_4_ObjectName__c</fullName>
        <description>Base object for level 4 filters</description>
        <inlineHelpText>Base object for level 4 filters</inlineHelpText>
        <label>Level 4 Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expert Search Position Filter Settings</label>
</CustomObject>